--- a/assets/style/sass/style.css
+++ b/assets/style/sass/style.css
@@ -55,6 +55,7 @@ img {
   padding: 6px 12px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #269fa3;
+  min-width: 150px;
   max-width: 300px;
   margin: 1em 0;
 }
@@ -76,20 +77,22 @@ img {
 }
 .modal h2 {
   width: 100%;
+  margin-bottom: 0;
 }
 
 .search_form {
   display: flex;
-  flex-direction: row;
-  margin: 2em 0;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1em 0;
+  gap: 1em;
 }
 .search_form input {
-  width: 50%;
-  margin-left: 2em;
+  width: 100%;
+  min-height: 2.2em;
 }
 .search_form label {
-  min-width: 130px;
-  text-align: right;
+  font-family: "font-family: 'Quicksand', sans-serif";
 }
 
 .body_list {
