--- a/app.css
+++ b/app.css
@@ -130,7 +130,7 @@ div {
   display: none;
 }
 
-.cards {
+.book_list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2em;
@@ -139,149 +139,53 @@ div {
   list-style: none; 
 
 }
-.cards img {
-  width: 100%;
-  position: relative;
-  -webkit-border-top-left-radius: 30px;
--webkit-border-bottom-right-radius: 30px;
--moz-border-radius-topleft: 30px;
--moz-border-radius-bottomright: 30px;
-border-top-left-radius: 30px;
-border-bottom-right-radius: 30px;
-
-}
-.overlay{
- 
-  transition: transform 300ms;
-  transform: translate3d(0, 100%, 0);
-  
-}
-.book_description{
-  opacity: 0;
-  transition: opacity 500ms 100ms;
-}
-
-.book_title {
-
-  width: 100%;
-  transition: transform 300ms;
-  transform: translate3d(0, -100%, 0);
-}
-.book_title, .book_author, .book_description{
-  position: absolute;
-  top: -50px;
-  left: 10px;
-}
-
 .card {
   display: block;
-  height: 100%;
+  width: 100%;
+  height: 450px;
   border-radius: 40px 0 0 0;
   overflow: hidden;
   text-decoration: none;
+  -webkit-border-top-left-radius: 30px;
+  -webkit-border-bottom-right-radius: 30px;
+  -moz-border-radius-topleft: 30px;
+  -moz-border-radius-bottomright: 30px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   list-style: none;
+  cursor: pointer;
+  position: relative;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(199,199,199,0); 
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(199,199,199,0); ;
 }
-.cards img:hover,
-.overlay:hover ~ .overlay .book_description,
-.overlay:hover ~ .overlay,
-.overlay:focus ~ .overlay{
-  transform: translate3d(0, 0, 0);
+.book_cover{
+  width: 100%;
   cursor: pointer;
 }
-  /*.card {
-    position: relative;
-    display: block;
-    height: 100%;  
-    border-radius: calc(var(--curve) * 1px);
-    overflow: hidden;
-    text-decoration: none;
-  }
-  
-  .card__image {      
-    width: 100%;
-    height: auto;
-  }
-  
-  .card__overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;      
-    border-radius: calc(var(--curve) * 1px);    
-    background-color: var(--surface-color);      
-    transform: translateY(100%);
-    transition: .2s ease-in-out;
-  }
-  
-  .card:hover .card__overlay {
-    transform: translateY(0);
-  }
-  
-  .card__header {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 2em;
-    padding: 2em;
-    border-radius: calc(var(--curve) * 1px) 0 0 0;    
-    background-color: var(--surface-color);
-    transform: translateY(-100%);
-    transition: .2s ease-in-out;
-  }
-  
-  .card__arc {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    bottom: 100%;
-    right: 0;      
-    z-index: 1;
-  }
-  
-  .card__arc path {
-    fill: var(#fff);
-    d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-  }       
-  
-  .card:hover .card__header {
-    transform: translateY(0);
-  }
-  
-  .card__thumb {
-    flex-shrink: 0;
-    width: 50px;
-    height: 50px;      
-    border-radius: 50%;      
-  }
-  
-  .card__title {
-    font-size: 1em;
-    margin: 0 0 .3em;
-    color: #6A515E;
-  }
-  
-  .card__tagline {
-    display: block;
-    margin: 1em 0;
-    font-family: "MockFlowFont";  
-    font-size: .8em; 
-    color: #D7BDCA;  
-  }
-  
-  .card__status {
-    font-size: .8em;
-    color: #D7BDCA;
-  }
-  
-  .card__description {
-    padding: 0 2em 2em;
-    margin: 0;
-    color: #D7BDCA;
-    font-family: "MockFlowFont";   
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-  }    
-  */
+.book_details{
+  bottom: 5em;
+  background-color: #f8fffe;
+  overflow-wrap: anywhere;
+  width: 100%;
+  padding: 1em;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  padding: 2em;
+  transition: .5s ease;
+  background-color: #deeef3;
+}
+
+.card:hover .overlay {
+  opacity: 1;
+}
+
+
