--- a/app.css
+++ b/app.css
@@ -139,6 +139,7 @@ div {
   list-style: none; 
 
 }
+/*
 .card {
   display: block;
   width: 100%;
@@ -153,14 +154,17 @@ div {
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
   list-style: none;
-  cursor: pointer;
-  position: relative;
+  
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(199,199,199,0); 
   box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(199,199,199,0); ;
 }
+.card:hover .overlay {
+  opacity: 1;
+}
+*/
 .book_cover{
   width: 100%;
-  cursor: pointer;
+  max-height: 250px;
 }
 .book_details{
   bottom: 5em;
@@ -172,20 +176,145 @@ div {
 
 .overlay {
   position: absolute;
-  top: 0;
+  top:0;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: auto;
+  width: auto;
   opacity: 0;
   padding: 2em;
   transition: .5s ease;
   background-color: #deeef3;
 }
 
-.card:hover .overlay {
-  opacity: 1;
+
+.card {
+  position: relative;
+  transition: all .5s ease-in;
 }
 
+.card__image {
+  display: block;
+  width: 100%;
+  height: 350px;
+  border-radius: 40px 0 0 0;
+  overflow: hidden;
+  text-decoration: none;
+  -webkit-border-top-left-radius: 30px;
+  -webkit-border-bottom-right-radius: 30px;
+  -moz-border-radius-topleft: 30px;
+  -moz-border-radius-bottomright: 30px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;  
+  cursor: pointer;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(199,199,199,0); 
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(199,199,199,0); ;
+}
+.card__overlay {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 3em;
+  opacity: 0;
+  visibility: none;
+  transition: .5s ease;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height:40vh;
+  border-radius: 50px;
+  flex:0.5;
+  position:relative;
+  transition: flex 0.5s ease-in;
+  color:#fff;
+  cursor:pointer;
+  margin:10px;
+  -webkit-border-top-left-radius: 30px;
+  -webkit-border-bottom-right-radius: 30px;
+  -moz-border-radius-topleft: 30px;
+  -moz-border-radius-bottomright: 30px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  display: flex;
+flex-direction: column;
+box-sizing: border-box;
+}
+.book_details{
+  background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height:80vh;
+    border-radius: 50px;
+    flex:0.5;
+    position:relative;
+    transition: flex 0.5s ease-in;
+    color:#fff;
+    cursor:pointer;
+    margin:10px;
+}
+.card:hover .card__overlay {
+  opacity: 1;
+}
+.card.active,
+.card:hover{
+    flex:5;
+}
 
+.card.active h3{
+    opacity:1;
+     transition: opacity 0.4s ease-in 0.4s;
+}
+
+@import url('https://fonts.googleapis.com/css2?Muli&display=swap');
+
+*{
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Muli', sans-serif;
+    margin: 0;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    overflow:hidden;
+}
+
+.container{
+    display:flex;
+    width:90vw;
+}
+
+.panel{
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height:40vh;
+    border-radius: 50px;
+    flex:0.5;
+    position:relative;
+    transition: flex 0.5s ease-in;
+    color:#fff;
+    cursor:pointer;
+    margin:10px;
+}
+
+.panel h3{
+    position:absolute;
+    bottom:20px;
+    left:20px;
+    opacity:0.6;
+}
+
+.panel.active,
+.panel:hover{
+    flex:5;
+}
+
+.panel.active h3{
+    opacity:1;
+     transition: opacity 0.4s ease-in 0.4s;
+}
