--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -38,7 +38,7 @@ div {
 
 .myBtn {
   box-shadow: 0px 10px 14px -7px #1c8c81;
-  background: linear-gradient();
+  background: linear-gradient(to bottom, #1c8c81 5%, #2bd9b9 100%);
   background-color: #2bd9b9;
   border-radius: 4px;
   border: 1px solid #28a9ab;
@@ -53,14 +53,14 @@ div {
   text-shadow: 0px 1px 0px #269fa3;
   min-width: 150px;
   max-width: 300px;
-  margin: 1em 0;
+  margin: 0.3em 0;
 }
 .myBtn:hover {
-  background: linear-gradient();
+  background: linear-gradient(to bottom, #1c8c81 5%, #2bd9b9 100%);
   background-color: #199e83;
 }
 .myBtn#cancel {
-  box-shadow: 0px 10px 14px -7px #1c8c81;
+  box-shadow: 0px 10px 14px -7px #d62f48;
   background: linear-gradient(to bottom, #ef3939 5%, #7f1454 100%);
   background-color: #da2736;
   border: 1px solid #c41932;
@@ -121,25 +121,109 @@ div {
 }
 
 .book_list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
-  margin: 4rem 5vw;
-  padding: 0;
+  /*display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+  gap: 2rem;*/
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  width: 80vw;
+  margin: 2rem 5vw;
+  padding: 1em;
   list-style: none;
-  border: solid 1px black;
+  overflow-x: scroll;
+  flex-direction: row;
 }
 .book_list li {
   list-style: none;
+  min-width: 15em;
 }
 .book_list h3.book_title {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "font-family: 'Righteous', cursive";
+  background-color: #15DEA5;
+  min-height: 4em;
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
+  width: 90%;
+}
+.book_list p.book_id, .book_list p.book_author {
+  font-family: "font-family: 'Quicksand', sans-serif";
+  background-color: #15DEA5;
+}
+.book_list button {
+  font-size: 1.5em;
 }
 
 .card {
-  display: block;
-  height: 100%;
+  display: flex;
+  margin: 1em;
+  padding: 0;
+  border-radius: 20px;
   overflow: hidden;
   text-decoration: none;
   list-style: none;
+  background-color: #F2F2F2;
+  box-shadow: 0px 10px 14px -7px #3b3b3b;
+  transition: width 0.5s ease-in;
+  color: #fff;
+  cursor: pointer;
+  margin: 10px;
+}
+.card .book_details {
+  display: flex;
+  transition: width 0.5s ease-in;
+  align-items: flex-start;
+  justify-content: stretch;
+  flex-direction: column;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 50vh;
+  position: relative;
+}
+.card .book_details > * {
+  display: flex;
+  flex-direction: column;
+}
+.card .book_details.active, .card .book_details:hover {
+  flex: 1.5;
+}
+.card .book_details.active h3 {
+  opacity: 1;
+  transition: opacity 0.4s ease-in 0.4s;
+  width: 90%;
+}
+.card .book_cover {
+  width: 100%;
+}
+.card:hover {
+  flex: 5;
+}
+
+.overlay {
+  opacity: 0;
+  background-color: #F2F2F2;
+  color: #0D0D0D;
+  height: 100%;
+  transition: opacity 0.4s ease-in 0.4s;
+}
+.overlay:hover {
+  opacity: 1;
+}
+
+.book_header {
+  position: relative;
+  background-color: #15DEA5;
+}
+
+.bookmark {
+  position: absolute;
+  right: 0.5em;
+  top: 0.5em;
+}
+
+.search_results {
+  display: flex;
 }/*# sourceMappingURL=style.css.map */
