--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -135,25 +135,17 @@ div {
   display: none;
 }
 .book_list{
-  /*display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
-  gap: 2rem;*/
-  display: flex;
-  align-content: center;
-  align-items: center;
-  justify-content: flex-start;
-  width: 80vw;
-  margin: 2rem 5vw;
-  padding: 1em;
-  list-style: none;
-  overflow-x: scroll;
-  flex-direction: row;
-  		li{
-			list-style: none;
-    min-width: 130em;
-    gap: 1em;
-
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+  gap: 2rem;
+    list-style: none;
+	li{
+		list-style: none;
+		min-width: 30em;	
+		max-width: 40%;
+	  }
+}
+  		
   h3.book_title{
 	font-family: $fontTitle;
 	background-color: #15DEA5;
@@ -170,13 +162,11 @@ div {
 	font-size: 1.5em;
   }
   
-}
+
 .card {
 	display: flex;
   margin: 1em;
   padding: 0;
-max-width: 20%;
-	overflow: hidden;
 	text-decoration: none;
 	list-style: none;
 	background-color: $primary;
