[ADD] Truncate function & description character limitation
count characters to limit them to 200

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1,10 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap");
 * {
-  margin: 0;
+  box-sizing: border-box;
+  margin: O;
   padding: 0;
+  font: inherit;
+}
+*::before {
   box-sizing: border-box;
+}
+*::after {
   box-sizing: border-box;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+svg {
+  display: block;
+  max-width: 100%;
 }
 
 body {
