--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -78,10 +78,6 @@ $surface-color: #fff;
 
 body {
 	font-family: $fontText;
-	/*display: flex;
-	min-width: 90vw;
-	min-height: 90vh;
-	padding: 3em;*/
 	color: $black;
 	background-color: $primary;
 }
@@ -160,15 +156,14 @@ div {
   justify-items: center;
     list-style: none;
 	li{
-		list-style: none;
+		
 		width: 100%;
 		display: flex;
 		display: flex;
     margin: 1em;
-    list-style: none;
-    background-color: #F2F2F2;
+    background-color:$primary;
     box-shadow: 0px 10px 14px -7px #3b3b3b;
-    color: #fff;
+    color:$black;
     flex-direction: column;
 	  }
 }
@@ -186,23 +181,17 @@ div {
   }
   
   .card {  
-	display: grid;
-	grid-template-columns: 3fr  1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-	gap: 0px 0px;
-	grid-auto-flow: row;
-	grid-template-areas:
-	  "book_title bookmark"
-	  "book_authors book_authors"
-	  "book_id book_id"
-	  "book_description book_description"
-	  "book_cover book_cover";
+	display: flex;
+	  background-color: $primary;
   }
   
-  .book_title { grid-area: book_title; }
+  .book_title { 
+	grid-area: book_title; }
   
-  .book_mark { grid-area: bookmark; }
-  
+  .book_mark { 
+	grid-area: book_mark; 
+	&#bookmark{color: $primary;}
+  }
   .book_authors { grid-area: book_authors; }
   
   .book_id { grid-area: book_id; }
@@ -210,12 +199,10 @@ div {
   .book_descrpion { grid-area: book_descrpion; }
   
   .book_cover { grid-area: book_cover; }
-.book_description{
+  .book_description{
 	background-color: $primary;
-	color: #0D0D0D;
-}
-
-.book_header{
+	color: #0D0D0D;}
+	.book_header{
 	background-color: #15DEA5;
 	input{
 		z-index: 1;
@@ -230,10 +217,7 @@ div {
 		height: 3em;
 	}
 }
-.bookmark{
-    color: $primary;
-	//opacity: .5;
-}
+
 
 .search_results {
 	display: flex;
