--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -1,8 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap");
+@import "https://fonts.googleapis.com/css2?family=Righteous&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap";
+/*# Tablets */
+/*# PC */
 * {
   box-sizing: border-box;
-  margin: O;
+  margin: 0;
   padding: 0;
   font: inherit;
 }
@@ -30,7 +32,13 @@ body {
   min-height: 90vh;
   padding: 3em;
   color: #0D0D0D;
-  background-color: #F2F2F2;
+  background-color: rgba(241, 246, 246, 0.5058823529);
+  height: 100%;
+  font-size: 1rem;
+}
+
+#myBooks {
+  width: 100%;
 }
 
 h1 {
@@ -39,17 +47,38 @@ h1 {
   margin: 1em 0;
   font-size: 1.5em;
   margin: 1em 0;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 h2 {
   font-family: "font-family: 'Righteous', cursive";
-  font-weight: 800;
-  margin: 1em 0;
-  font-size: 1.2em;
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 1.5em;
+  padding-bottom: 15px;
+  position: relative;
+  font-size: 1.25rem;
 }
-
-div {
-  width: 100%;
+h2:hover {
+  transform: none;
+}
+h2:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 5px;
+  width: 6em;
+  background-color: #111;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 5px;
+  width: 6em;
+  background-color: #111;
 }
 
 .myBtn {
@@ -62,19 +91,24 @@ div {
   cursor: pointer;
   color: #F2F2F2;
   font-family: "font-family: 'Quicksand', sans-serif";
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: bold;
   padding: 6px 12px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #269fa3;
-  min-width: 150px;
-  max-width: 300px;
+  min-width: 100px;
+  max-width: 200px;
   margin: 0.3em 0;
+  transition-property: transform;
+  transition-duration: 1000ms;
+  transform: scale(1);
 }
 .myBtn:hover {
   background: linear-gradient(to bottom, #1c8c81 5%, #2bd9b9 100%);
   background-color: #199e83;
+  transform: scale(1.1);
 }
+
 .myBtn#cancel {
   box-shadow: 0px 10px 14px -7px #d62f48;
   background: linear-gradient(to bottom, #ef3939 5%, #7f1454 100%);
@@ -113,7 +147,7 @@ div {
 
 .logo {
   width: 125px;
-  margin: 2%;
+  margin: 0 auto;
   display: block;
   padding: 5px;
   box-shadow: 5px 5px 20px #6F6E77;
@@ -134,120 +168,124 @@ div {
 
 .hidden {
   display: none;
+  opacity: 0;
 }
 
 .book_list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+  display: block;
   gap: 2rem;
   list-style: none;
-}
-.book_list li {
-  list-style: none;
-  min-width: 35em;
-  max-width: 40%;
 }
 
 h3.book_title {
   font-family: "font-family: 'Righteous', cursive";
-  background-color: #15DEA5;
-  min-height: 4em;
-  display: flex;
-  align-items: center;
-  width: 90%;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
-p.book_id, p.book_author {
+.book_id {
   font-family: "font-family: 'Quicksand', sans-serif";
-  background-color: #15DEA5;
+  font-size: var(--fs-400);
+}
+
+.book_authors {
+  font-family: "font-family: 'Quicksand', sans-serif";
+  font-size: 1rem;
 }
 
 button {
-  font-size: 1.5em;
+  font-size: 1rem;
 }
 
-.card {
+.book {
   display: flex;
+  flex-direction: column;
   margin: 1em;
-  padding: 0;
+  padding: 2em;
   text-decoration: none;
   list-style: none;
-  background-color: #F2F2F2;
+  background: rgba(0, 0, 0, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   box-shadow: 0px 10px 14px -7px #3b3b3b;
-  transition: width 0.5s ease-in;
-  color: #fff;
-  cursor: pointer;
-  margin: 10px;
-}
-.card .book_details {
-  display: flex;
-  transition: width 0.5s ease-in;
-  align-items: flex-start;
-  justify-content: stretch;
-  flex-direction: column;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 50vh;
-}
-.card .book_details > * {
-  display: flex;
-  flex-direction: column;
-  padding: 1em;
-}
-.card .book_details.active, .card .book_details:hover {
-  flex: 1.5;
-}
-.card .book_details.active h3 {
-  opacity: 1;
-  transition: opacity 0.4s ease-in 0.4s;
-  width: 90%;
-}
-.card .book_cover {
-  width: 100%;
-}
-.card:hover {
-  flex: 5;
-}
-
-.overlay {
-  opacity: 0;
-  background-color: #F2F2F2;
   color: #0D0D0D;
-  height: 100%;
-  transition: opacity 0.4s ease-in 0.4s;
 }
-.overlay:hover {
-  opacity: 1;
+.book .book_header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 2em;
+  min-height: 6em;
+}
+.book .book_description {
+  margin-bottom: 2em;
+  font-size: 1rem;
+  min-height: 6em;
+}
+.book img {
+  width: 100px;
+  transition-property: transform;
+  transition-duration: 1000ms;
+  transform: scale(1);
+}
+.book img:hover {
+  transform: scale(1.6);
 }
 
-.book_header {
-  background-color: #15DEA5;
+.book_cover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.book_header input {
-  z-index: 1;
-  border: none;
-  background-color: transparent;
-}
-.book_header input:checked, .book_header input:active {
-  color: #15DEA5;
-}
-.book_header i {
-  height: 3em;
+
+i {
+  width: 4em;
+  padding-left: 3em;
 }
 
 .bookmark {
   color: #F2F2F2;
+  font-size: 1.25rem;
+}
+
+.delete {
+  color: #d62f48;
+  font-size: 1.25rem;
 }
 
 .search_results {
   display: flex;
 }
 
-.hidden {
-  opacity: 0;
-}
-
 .show {
   opacity: 100%;
+}
+
+@media screen and (min-width: 820px) {
+  .book_list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
+    gap: 2rem;
+    list-style: none;
+  }
+  .book img {
+    width: 150px;
+    transition-property: transform;
+    transition-duration: 1000ms;
+    transform: scale(1);
+  }
+}
+@media screen and (min-width: 1025px) {
+  .book_list {
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  }
+  .book img {
+    width: 200px;
+    transition-property: transform;
+    transition-duration: 1000ms;
+    transform: scale(1);
+  }
 }/*# sourceMappingURL=style.css.map */
